# WPAWolf

./: .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HASHCAT-CURRENT-FORMATS.md  HASHCAT-NEW-FORMATS.md  HASHCAT-PROPOSED-CHANGES.md  LICENSE  Makefile  README.md  SECURITY.md  STATS.md  build.rs  clippy.toml  deny.toml  rustfmt.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  release.yml  security.yml
src/: debug.rs  lib.rs  log.rs  main.rs  mem_monitor.rs  mem_stats.rs  progress.rs  stats.rs  strings_scan.rs  types.rs
src/extract/: action.rs  assoc.rs  auth.rs  beacon.rs  common.rs  data.rs  mgmt.rs  mod.rs  probe.rs  wds.rs
src/ieee80211/: amsdu.rs  anqp.rs  eap.rs  eapol.rs  frame.rs  ft.rs  ie.rs  mod.rs  rsn.rs
src/input/: gzip.rs  mod.rs  pcap.rs  pcapng.rs
src/link/: avs.rs  fcs.rs  mod.rs  ppi.rs  prism.rs  radiotap.rs  recover.rs  sll.rs
src/output/: dedup.rs  device_info.rs  disk_dedup.rs  hashcat.rs  mod.rs  wordlists.rs
src/pair/: collapse.rs  combos.rs  constraints.rs  mod.rs  nc_dedup.rs
src/store/: auxiliary.rs  disk_messages.rs  essid.rs  fragments.rs  messages.rs  mod.rs  pmkid.rs
tests/integration/: anqp_parse.rs  common.rs  cross_file_pairing.rs  eapol_transport_vectors.rs  extended_combined_o.rs  extended_dedup_per_sink.rs  extended_outputs_per_akm.rs  extraction_coverage.rs  fragment_reassembly.rs  generated_corpus.rs  log_categories_coverage.rs  malformed_frame_log.rs  mode_parity_strict_subset_wide.rs  nc_dedup_collapse.rs  per_type_fixtures.rs  pmkid_coverage.rs  progress_reporting.rs  smart_subset_wide.rs  superset_test.rs  taxonomy_combined_o.rs  taxonomy_dedup_per_sink.rs  taxonomy_outputs_per_akm.rs  wordlist_scan_ies.rs
tools/: audit_citations.sh  audit_stats.sh
tools/fixturegen/: Cargo.toml  Makefile  README.md  deny.toml
tools/fixturegen/scripts/: verify_sha384.py
tools/fixturegen/src/: catalog.rs  crypto.rs  handshake.rs  lib.rs  linklayer.rs  main.rs  pcap_writer.rs
tools/fixturegen/src/frame/: action.rs  assoc.rs  auth.rs  beacon.rs  eapol.rs  ie.rs  kde.rs  mac.rs  mod.rs  probe.rs
